課題有りプラクティスは一般ユーザーは完了できないように実装

--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -323,7 +323,7 @@ ja:
         description: "内容"
         goal: "終了条件"
         target: "ターゲット"
-
+        task: "課題有り"
       company:
         name: "名前"
         description: "詳細"
