--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -455,6 +455,7 @@ ja:
   listing_questions: "Q & A"
   companies: "会社"
   categories: "カテゴリー"
+  artifacts: "成果物"
   editing_practice: "プラクティス編集"
   editing_company: "会社編集"
   editing_user: "アカウント情報編集"
