管理者が成果物を確認するページを作成

--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -455,7 +455,9 @@ ja:
   listing_questions: "Q & A"
   companies: "会社"
   categories: "カテゴリー"
-  artifacts: "成果物"
+  artifacts: "成果物一覧"
+  artifact: "成果物"
+  artifact_title: "提出した成果物"
   editing_practice: "プラクティス編集"
   editing_company: "会社編集"
   editing_user: "アカウント情報編集"
