管理者が提出された課題を完了出来るようにする。

--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -504,6 +504,7 @@ ja:
   all_user: "全員"
   how_256interns_works: "256インターンとは"
   completed: "完了"
+  artifact_done_message: "依頼された課題の確認を完了しました。"
   notice_completed_practice: "このプラクティスを完了しました。"
   completed_users: "完了したインターン"
   completed_practices: "完了したプラクティス"
