--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -458,6 +458,7 @@ ja:
   artifacts: "成果物一覧"
   artifact: "成果物"
   artifact_title: "提出した成果物"
+  artifact_form: "課題の提出フォーム"
   editing_practice: "プラクティス編集"
   editing_company: "会社編集"
   editing_user: "アカウント情報編集"
