--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -458,6 +458,7 @@ ja:
   artifacts: "成果物一覧"
   artifact: "成果物"
   artifact_title: "提出した成果物"
+  artifact_added_title: "提出した成果物"
   artifact_form: "課題の提出フォーム"
   artifact_create_notice: "課題の成果物を提出しました。"
   editing_practice: "プラクティス編集"
