Fix listing reports

--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -526,7 +526,7 @@ ja:
   order: 並び順
   solved: 解決済み
   unsolved: 未解決
-  related-reports: このチュートリアルに関する日報
+  related-reports: このプラクティスに関する日報
   to_index_of_reports: 日報一覧へ
   to_index_of_questions: Q&A一覧へ
   post_comment: コメントを投稿
