markdown の preview が機能していなかったのを修正

--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -455,6 +455,7 @@ ja:
   listing_questions: "Q & A"
   companies: "会社"
   categories: "カテゴリー"
+  listing_categories: "カテゴリー一覧"
   editing_practice: "プラクティス編集"
   editing_company: "会社編集"
   editing_user: "アカウント情報編集"
