--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -161,7 +161,7 @@ ja:
         category_id: "カテゴリー"
 
       user:
-        login_name: "インターン名"
+        login_name: "ユーザー名"
         first_name: "名"
         last_name: "姓"
         full_name: "フルネーム"
@@ -178,12 +178,11 @@ ja:
         current_password: "現在のパスワード"
         remember_me: "次回から自動的にログイン"
         job: "職種"
-        purpose: "インターンの目的"
+        purpose: "学習の目的"
         find_job_assist: "就職支援"
         company: "会社"
         created_at: "開始日"
         updated_at: "最終活動日時"
-        part: "パート"
         nda: 秘密保持契約
 
       learning:
@@ -206,7 +205,7 @@ ja:
         email: "メールアドレス"
         occupation: "職業"
         division: "所属"
-        location: "インターン実施場所"
+        location: "学習場所"
         has_mac: "Macの有無"
         work_time: "希望時間帯"
         work_days: "動ける日数"
@@ -247,14 +246,14 @@ ja:
 
   activerecord:
     models:
-      user: "インターン"
+      user: "ユーザー"
       practice: "プラクティス"
       company: "会社"
       comment: "コメント"
       report: "日報"
       page: "Wiki"
       question: "Q&A"
-      contact: "インターン申し込みフォーム"
+      contact: "申し込みフォーム"
 
     enums:
       user:
@@ -288,7 +287,7 @@ ja:
 
     attributes:
       user:
-        login_name: "インターン名"
+        login_name: "ユーザー名"
         first_name: "名"
         last_name: "姓"
         description: "自己紹介（動ける曜日・時間）"
@@ -308,13 +307,13 @@ ja:
         icon_content_type: 画像ファイルの種類
         notify_comment: コメント通知
         job: "職種"
-        purpose: "インターンの目的"
+        purpose: "学習の目的"
         find_job_assist: "就職支援"
         company: "会社"
-        created_at: "インターン開始日時"
+        created_at: "開始日時"
         updated_at: "最終活動日時"
         nda: 秘密保持契約
-        graduation: インターン卒業
+        graduation: 卒業
         adviser: アドバイザー
         retire: リタイア
 
@@ -355,7 +354,7 @@ ja:
         email: "メールアドレス"
         occupation: "職業"
         division: "所属"
-        location: "インターン実施場所"
+        location: "学習場所"
         has_mac: "Macの有無"
         work_time: "希望時間帯"
         work_days: "動ける日数"
@@ -424,7 +423,7 @@ ja:
   hide_completed: "完了済みプラクティスを隠す"
   show_completed: "完了済みプラクティスを表示"
   dashboard: "ダッシュボード"
-  new_user: "新規インターン"
+  new_user: "新規ユーザー"
   new_company: "新規会社"
   new_practice: "新規プラクティス"
   new_report: "日報の新規作成"
@@ -434,19 +433,19 @@ ja:
   check: "確認者"
   check_count: "名"
   256interns: "256 INTERNS"
-  users: "インターン"
+  users: "ユーザー"
   my_practices: "マイプラクティス"
   activities: "アクティビティ"
   practices: "プラクティス"
   names_practices: "%{name}'s Practices"
-  enter_for_intern: "インターンシップを申し込む"
+  enter_for_intern: "申し込む"
   continue: "コンティニュー"
   introduction: "イントロダクション"
   registration_form: "申し込みフォーム"
   programmer: "プログラマー"
   designer: "デザイナー"
   everyone: "共通"
-  listing_users: "インターン一覧"
+  listing_users: "ユーザー一覧"
   listing_courses: "コース一覧"
   listing_practices: "プラクティス一覧"
   reports: "日報"
@@ -470,12 +469,12 @@ ja:
   back: "戻る"
   copy: "コピー"
   "bob's_practices": "%{name}のプラクティス"
-  invalid_email_or_password: "インターン名かパスワードが違います。"
+  invalid_email_or_password: "ユーザー名かパスワードが違います。"
   status_for_all_practices: "全てのプラクティスの状態"
   sign_in_successful: "サインインしました。"
   sign_out: "サインアウトしました。"
   registration_successfull: "サインアップしました。"
-  user_was_successfully_updated: "インターンを更新しました。"
+  user_was_successfully_updated: "ユーザーを更新しました。"
   practice_was_successfully_created: "プラクティスを作成しました。"
   practice_was_successfully_updated: "プラクティスを更新しました。"
   practice_was_successfully_deleted: "プラクティスを削除しました。"
@@ -494,7 +493,7 @@ ja:
   category_was_successfully_deleted: "カテゴリーを削除しました。"
   contact_was_successfully_created: "お申込みを受け付けました。"
   report_was_successfully_check: "この日報を確認しました。"
-  learning_users: "学習中インターン"
+  learning_users: "学習中ユーザー"
   for: "%{target} 課題"
   for: "%{target} 課題"
   for_everyone: "共通"
@@ -503,20 +502,17 @@ ja:
   how_256interns_works: "256インターンとは"
   completed: "完了"
   notice_completed_practice: "このプラクティスを完了しました。"
-  completed_users: "完了したインターン"
+  completed_users: "完了したユーザー"
   completed_practices: "完了したプラクティス"
   active_practices: "進行中のプラクティス"
-  learning_week: "学習週"
-  working_week: "作業週"
   graduate: "卒業生"
   adviser: "アドバイザー"
-  current_week_is_xxx: "今週は%{part}です"
   i_want_to_find_job_assist: "フィヨルドの就職支援を希望する"
   i_do_not_want_to_find_job_assist: "フィヨルドの就職支援を希望しない"
   we_will_find_rails_job_by_our_best: "町田、駒形が知り合いのrailsを使った会社や知り合いの就職支援サイトなどを駆使して全力で就職先探しをサポートします。"
   agree_nda: "秘密保持契約に同意する"
-  active_users: "アクティブインターン (%{count})"
-  inactive_users: "最近活動の無いインターン (%{count})"
+  active_users: "アクティブユーザー (%{count})"
+  inactive_users: "最近活動の無いユーザー (%{count})"
   action: 操作
   order: 並び順
   related-reports: 関連した日報
@@ -532,8 +528,8 @@ ja:
   to_index_of_questions: Q&A一覧へ
   post_comment: コメントを投稿
   check_report: 日報を確認する
-  interns: インターン一覧
-  admin_interns: インターン情報
+  interns: ユーザー一覧
+  admin_interns: ユーザー情報
   login_name_description: チャットやSNS（Twitter、Github、ブログ など）でユーザー名が異なると個人を認識するのが困難になります。極力ユーザー名は統一するようにしてください。
   email_description: このメールアドレスは卒業後の連絡にも使うので、会社で提供されたなどの第三者によって提供されたメールアドレスではなく、転職後も使い続ける自分自身で取得したメールアドレスで登録してください。
   questions: Q&A
