日報に学習日を追加
学習している日を把握するため。
のちのち、連続学習X日などとホームに出したい。

--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -334,8 +334,9 @@ ja:
         description: 詳細
 
       report:
-        title: "タイトル"
-        description: "内容"
+        title: タイトル
+        reported_at: 学習日
+        description: 内容
 
       page:
         title: タイトル
