QA周りのページにデザイン

--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -488,7 +488,7 @@ ja:
   editing_question: 質問編集
   editing_answer: 回答編集
   new_category: "カテゴリー追加"
-  new_question: "みんなに聞いてみる"
+  new_question: "みんなに聞く"
   show: "表示"
   back: "戻る"
   copy: "コピー"
