お知らせ作成と更新のメッセージを日本語のみに変更

--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -575,7 +575,5 @@ ja:
   announcements: "お知らせ"
   new_announcement: "お知らせの新規作成"
   new_report: "日報の新規作成"
-  to_index_of_announcements: お知らせ一覧へ
+  to_index_of_announcements: "お知らせ一覧へ"
   editing_announcement: "お知らせ編集"
-  announcement_was_successfully_created: "お知らせを作成しました"
-  announcement_was_successfully_updated: "お知らせを更新しました"
