--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -174,7 +174,7 @@ ja:
         facebook_url: "Facebook URL"
         blog_url: "ブログURL"
         feed_url: "ブログのフィードURL"
-        github_account: "Githubアカウント"
+        github_account: "GitHubアカウント"
         password: "パスワード"
         password_confirmation: "パスワード（確認）"
         current_password: "現在のパスワード"
@@ -215,7 +215,7 @@ ja:
         twitter_account: "Twitterアカウント"
         facebook_url: "Facebook URL"
         blog_url: "ブログURL"
-        github_account: "Githubアカウント"
+        github_account: "GitHubアカウント"
         application_reason: "志望理由"
         user_policy_agreed: "個人情報の取り扱いについて"
 
@@ -301,7 +301,7 @@ ja:
         facebook_url: "Facebook URL"
         blog_url: "ブログURL"
         feed_url: "ブログのフィードURL"
-        github_account: Githubアカウント
+        github_account: GitHubアカウント
         slack_account: Slackアカウント
         password: パスワード
         password_confirmation: パスワード（確認）
@@ -377,7 +377,7 @@ ja:
         twitter_account: "Twitterアカウント"
         facebook_url: "Facebook URL"
         blog_url: "ブログURL"
-        github_account: "Githubアカウント"
+        github_account: "GitHubアカウント"
         application_reason: "志望理由"
         user_policy_agreed: "個人情報の取り扱いについて"
 
@@ -553,7 +553,7 @@ ja:
   check_report: 日報を確認する
   interns: ユーザー一覧
   admin_interns: ユーザー情報
-  login_name_description: チャットやSNS（Twitter、Github、ブログ など）でユーザー名が異なると個人を認識するのが困難になります。極力ユーザー名は統一するようにしてください。
+  login_name_description: チャットやSNS（Twitter、GitHub、ブログ など）でユーザー名が異なると個人を認識するのが困難になります。極力ユーザー名は統一するようにしてください。
   email_description: このメールアドレスは卒業後の連絡にも使うので、会社で提供されたなどの第三者によって提供されたメールアドレスではなく、転職後も使い続ける自分自身で取得したメールアドレスで登録してください。
   questions: Q&A
   search_report: 日報検索
