検索結果にデザイン

--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -447,3 +447,7 @@ ja:
     retired: リタイア
     inactive: 非アクティブ
     year_end_party: 忘年会
+  report: "日報"
+  practice: "プラクティス"
+  question: "Q&A"
+  page: "wiki"
