i18nをたくさん削除

--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -283,6 +283,11 @@ ja:
           everyone: "共通"
           programmer: "プログラマー向け"
           designer: "デザイナー向け"
+      learning:
+        status:
+          started: 開始
+          complete: 完了
+          not_complete: 未完
       contact:
         occupation_cd:
           student: "学生"
@@ -442,156 +447,3 @@ ja:
     retired: リタイア
     inactive: 非アクティブ
     year_end_party: 忘年会
-
-  admin_index: "管理画面"
-  sign_up: "サインアップ"
-  sign_in: "サインイン"
-  logout: "ログアウト"
-  please_sign_in_first: "ログインしてください"
-  please_sign_in_as_admin: "管理者としてログインしてください"
-  please_sign_in_as_admin_or_adviser: "管理者またはアドバイザーとしてログインしてください"
-  greeting: "こんにちは、%{recipient}さん"
-  forgot_password: "パスワードを忘れた方はこちら"
-  reset_my_password: "パスワードをリセットする"
-  your_password_has_been_reset: "パスワードの再設定について"
-  instruction_have_been_sent: "パスワードの再設定についてのメールを送信しました"
-  password_was_successfully_updated: "パスワードが正しく変更されました"
-  someone_wanted_to_reset_the_password: "誰かがパスワードの再設定を希望しました"
-  if_you_did_not_wish_please_disregard_this_email: "あなたが希望したのではないのなら、このメールは無視してください"
-  the_password_will_not_be_changed_until_you_access_the_link_above_and_set_a_new_password: "上のリンクにアクセスして新しいパスワードを設定するまで、パスワードは変更されません"
-  choose_a_new_password: "パスワードを変更する"
-  are_you_sure: "本当によろしいですか？"
-  start: "スタート"
-  edit: "編集"
-  destroy: "削除"
-  save: "保存"
-  not_complete: "未完"
-  unstarted: "開始"
-  complete: "完了"
-  started: "開始"
-  practice_status_reset_confirmation: "未着手状態に戻しますがよろしいですか？"
-  hide_completed: "完了済みプラクティスを隠す"
-  show_completed: "完了済みプラクティスを表示"
-  dashboard: "ダッシュボード"
-  new_user: "新規ユーザー"
-  new_company: "新規会社"
-  new_practice: "新規プラクティス"
-  new_report: "日報の新規作成"
-  created_by: "created by "
-  updated_by: "updated by "
-  comments: "コメント"
-  check: "確認者"
-  check_count: "名"
-  users: "ユーザー"
-  my_practices: "マイプラクティス"
-  activities: "アクティビティ"
-  practices: "プラクティス"
-  names_practices: "%{name}'s Practices"
-  enter_for_intern: "申し込む"
-  continue: "コンティニュー"
-  introduction: "イントロダクション"
-  registration_form: "申し込みフォーム"
-  programmer: "プログラマー"
-  designer: "デザイナー"
-  everyone: "共通"
-  listing_users: "ユーザー一覧"
-  listing_courses: "コース一覧"
-  listing_practices: "プラクティス一覧"
-  reports: "日報"
-  report_comments_any: "コメント"
-  listing_companies: "会社一覧"
-  listing_questions: "Q & A"
-  companies: "会社"
-  categories: "カテゴリー"
-  listing_categories: "カテゴリー一覧"
-  editing_practice: "プラクティス編集"
-  editing_company: "会社編集"
-  editing_user: "アカウント情報編集"
-  editing_category: "カテゴリー編集"
-  editing_report: "日報の編集"
-  editing_comment: "コメントの編集"
-  editing_question: 質問編集
-  editing_answer: 回答編集
-  new_category: "カテゴリー追加"
-  new_question: "みんなに聞く"
-  show: "表示"
-  back: "戻る"
-  copy: "コピー"
-  "bob's_practices": "%{name}のプラクティス"
-  "practice's_product": "「%{practice}」の提出物"
-  invalid_email_or_password: "ユーザー名かパスワードが違います。"
-  status_for_all_practices: "全てのプラクティスの状態"
-  sign_in_successful: "サインインしました。"
-  sign_out: "サインアウトしました。"
-  registration_successfull: "サインアップしました。"
-  user_was_successfully_updated: "ユーザーを更新しました。"
-  practice_was_successfully_created: "プラクティスを作成しました。"
-  practice_was_successfully_updated: "プラクティスを更新しました。"
-  practice_was_successfully_deleted: "プラクティスを削除しました。"
-  company_was_successfully_created: "会社を作成しました。"
-  company_was_successfully_updated: "会社を更新しました。"
-  company_was_successfully_deleted: "会社を削除しました。"
-  report_was_successfully_created: "日報を作成しました。"
-  report_was_successfully_updated: "日報を更新しました。"
-  report_was_successfully_deleted: "日報を削除しました。"
-  comment_was_successfully_created: "コメントを投稿しました。"
-  comment_was_successfully_updated: "コメントを更新しました。"
-  comment_was_successfully_deleted: "コメントを削除しました。"
-  company_was_successfully_destroyed: "会社を削除しました。"
-  category_was_successfully_created: "カテゴリーを作成しました。"
-  category_was_successfully_updated: "カテゴリーを更新しました。"
-  category_was_successfully_deleted: "カテゴリーを削除しました。"
-  contact_was_successfully_created: "お申込みを受け付けました。"
-  checkable_was_successfully_check: "この%{checkable}を確認しました。"
-  learning_users: "学習中ユーザー"
-  for: "%{target} 課題"
-  for: "%{target} 課題"
-  for_everyone: "共通"
-  all: "全て"
-  all_user: "全員"
-  completed: "完了"
-  notice_completed_practice: "このプラクティスを完了しました。"
-  completed_users: "完了したユーザー"
-  completed_practices: "完了したプラクティス"
-  active_practices: "進行中のプラクティス"
-  graduate: "卒業生"
-  adviser: "アドバイザー"
-  i_want_to_find_job_assist: "フィヨルドの就職支援を希望する"
-  i_do_not_want_to_find_job_assist: "フィヨルドの就職支援を希望しない"
-  we_will_find_rails_job_by_our_best: "町田、駒形が知り合いのrailsを使った会社や知り合いの就職支援サイトなどを駆使して全力で就職先探しをサポートします。"
-  agree_nda: "秘密保持契約に同意する"
-  active_users: "アクティブユーザー (%{count})"
-  inactive_users: "最近活動の無いユーザー (%{count})"
-  action: 操作
-  order: 並び順
-  related-reports: 関連した日報
-  search_report: 日報検索
-  search_for: "'%{text}' の検索結果"
-  q_and_a: "Q & A"
-  action: 操作
-  order: 並び順
-  solved: 解決済み
-  unsolved: 未解決
-  related-reports: このプラクティスに関する日報
-  to_index_of_reports: 日報一覧へ
-  to_index_of_questions: Q&A一覧へ
-  post_comment: コメントを投稿
-  check_report: 日報を確認する
-  interns: ユーザー一覧
-  admin_interns: ユーザー情報
-  questions: Q&A
-  search_report: 日報検索
-  search_for: "'%{text}' の検索結果"
-  q_and_a: "Q & A"
-  action: 操作
-  order: 並び順
-  solved: 解決済み
-  unsolved: 未解決
-  we_checked: 見たよ
-  best_answer_html: ベスト<br>アンサー
-  check_if_user_shold_submit_a_product: "提出物がある場合はチェック"
-  announcements: "お知らせ"
-  new_announcement: "お知らせの新規作成"
-  new_report: "日報の新規作成"
-  to_index_of_announcements: "お知らせ一覧へ"
-  editing_announcement: "お知らせ編集"
