--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -360,6 +360,7 @@ ja:
         title: タイトル
         reported_at: 学習日
         description: 内容
+        learning_times: 学習時間
 
       learning_time:
         started_at: 開始時間
