ロケール、テストを変更

--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -370,6 +370,9 @@ ja:
         description: 内容
         learning_times: 学習時間
 
+      report/learning_times:
+        finished_at: 終了時間
+
       learning_time:
         started_at: 開始時間
         finished_at: 終了時間
