--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -176,7 +176,7 @@ ja:
         first_name: "名"
         last_name: "姓"
         full_name: "フルネーム"
-        description: "自己紹介（動ける曜日・時間）"
+        description: "自己紹介"
         email: "Email"
         twitter: "Twitter"
         twitter_account: "Twitterアカウント"
@@ -271,6 +271,26 @@ ja:
       announcement: "お知らせ"
 
     enums:
+      user:
+        job:
+          student: 学生
+          office_worker: 会社員
+          part_time_worker: フリーター
+          vacation: 休職中
+          unemployed: 働いていない
+        os:
+          windows: Windows
+          mac: Mac
+          linux: Linux
+        study_place:
+          local: フィヨルドブートキャンプオフィス
+          remote: 自宅
+        experience:
+          inexperienced: 未経験
+          html_css: HTML/CSS経験あり
+          other_ruby: Ruby以外の言語経験あり
+          ruby: Ruby経験あり
+          rails: Rails経験あり
       practice:
         targets:
           everyone: "共通"
@@ -305,7 +325,7 @@ ja:
         first_name: "名"
         last_name: "姓"
         course_id: コース
-        description: "自己紹介（動ける曜日・時間）"
+        description: 自己紹介
         email: "Email"
         twitter_account: "Twitterアカウント"
         facebook_url: "Facebook URL"
@@ -321,7 +341,12 @@ ja:
         icon_file_size: 画像ファイルのサイズ
         icon_content_type: 画像ファイルの種類
         notify_comment: コメント通知
-        job: "職種"
+        job: 職業
+        os: 利用OS
+        study_place: 学習場所
+        experience: プログラミング経験
+        organization: 所属組織
+        how_did_you_know: どこで知ったか
         company: "会社"
         created_at: "開始日時"
         updated_at: "最終活動日時"
