退会理由のテキストボックスと退会ボタンを設置した

--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -57,6 +57,7 @@ ja:
         adviser: アドバイザー
         retired_on: リタイア日
         free: 無料ユーザー
+        retire_reason: 退会理由
       course:
         title: タイトル
         description: 詳細
