プラクティス編集のバグ修正
編集のときにカテゴリーのプルダウンが空になってしまう問題修正

--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -67,6 +67,7 @@ ja:
         goal: 終了条件
         target: ターゲット
         submission: 提出物
+        category_id: カテゴリー
       product:
         user: ユーザー
         practice: プラクティス
