--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -57,6 +57,7 @@ ja:
         adviser: アドバイザー
         retired_on: リタイア日
         free: 無料ユーザー
+        avatar: アイコン画像
       course:
         title: タイトル
         description: 詳細
