--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -55,6 +55,7 @@ ja:
         nda: 秘密保持契約
         graduated_on: 卒業日
         adviser: アドバイザー
+        trainee: 研修生
         retired_on: リタイア日
         free: 無料ユーザー
       course:
@@ -144,3 +145,4 @@ ja:
     retired: リタイア
     inactive: 非アクティブ
     year_end_party: 忘年会
+    trainee: 研修生
