新規/修正の場合のボタンの文言変更をi18nの機能でするようにした

--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -151,3 +151,7 @@ ja:
     inactive: 非アクティブ
     year_end_party: 忘年会
     trainee: 研修生
+  helpers:
+    submit:
+      create: 投稿する
+      update: 内容を変更する
