テストが落ちるので、ボタンの文言を他に合わせた

--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -153,5 +153,5 @@ ja:
     trainee: 研修生
   helpers:
     submit:
-      create: 投稿する
-      update: 内容を変更する
+      create: 登録する
+      update: 更新する
