--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -50,7 +50,7 @@ ja:
         organization: 現在の所属組織
         how_did_you_know: どこで知ったか
         company: 会社
-        created_at: 開始日時
+        created_at: 開始日
         updated_at: 最終活動日時
         nda: 秘密保持契約
         graduated_on: 卒業日
