--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -17,7 +17,7 @@ ja:
       comment: コメント
       report: 日報
       learning_time: 学習時間
-      page: Wiki
+      page: Docs
       question: Q&A
       product: 提出物
       announcement: お知らせ
