アカウント設定画面に就職活動中チェックボックスを追加

--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -56,6 +56,7 @@ ja:
         graduated_on: 卒業日
         adviser: アドバイザー
         trainee: 研修生
+        job_seeking: 就職活動中
         retired_on: リタイア日
         free: 無料ユーザー
         avatar: アイコン画像
