--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -22,6 +22,7 @@ ja:
       product: 提出物
       announcement: お知らせ
       article: ブログ記事
+      work: 作品
     attributes:
       user:
         login_name: ユーザー名
@@ -118,6 +119,12 @@ ja:
       article:
         title: タイトル
         body: 本文
+      work:
+        title: タイトル
+        description: 説明
+        url: URL
+        repository: リポジトリ
+        thumbnail: サムネイル画像
     enums:
       user:
         job:
