--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -124,6 +124,7 @@ ja:
         description: 説明
         url: URL
         repository: リポジトリ
+        url_or_repository: URLまたはリポジトリ
         thumbnail: サムネイル画像
     enums:
       user:
