未入力の項目リストのデザイン

--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -60,7 +60,7 @@ ja:
         job_seeking: 就職活動中
         retired_on: リタイア日
         free: 無料ユーザー
-        avatar: アイコン画像
+        avatar: プロフィール画像
         retire_reason: 退会理由
       course:
         title: タイトル
