研修生が日報・提出物を作成したらSlackチャンネルに投稿するようにした
- 企業編集ページにSlackチャンネルカラム追加
- 研修生フラグを管理者がつけられるようにした

--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -82,6 +82,8 @@ ja:
         name: 名前
         description: 詳細
         website: ウェブサイト
+        logo: ロゴ
+        slack_channel: Slackチャンネル
       category:
         name: 名前
         slug: URLスラッグ
