--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -63,6 +63,7 @@ ja:
         free: 無料ユーザー
         avatar: プロフィール画像
         retire_reason: 退会理由
+        mail_notification: メール通知
       course:
         title: タイトル
         description: 詳細
